force-app/main/default/objects/Croesus_SSO__mdt/Croesus_SSO__mdt.object-meta.xml
<CustomObject>
    <description>Custom MetaData for CroesusSSOAuthProvider</description>
    <label>Croesus SSO</label>
    <pluralLabel>Croesus SSO</pluralLabel>
</CustomObject>