force-app/main/default/objects/Croesus_SSO__mdt/fields/apikey__c.field-meta.xml
<CustomField>
    <fullName>apikey__c</fullName>
    <description>Croesus&apos; API key</description>
    <label>apikey</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>