force-app/main/default/objects/Croesus_SSO__mdt/fields/apiroute__c.field-meta.xml
<CustomField>
    <fullName>apiroute__c</fullName>
    <description>Croesus API route</description>
    <label>apiroute</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>