force-app/main/default/objects/Croesus_SSO__mdt/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <inlineHelpText>The URL of the callback of the Croesus SSO Auth Provider</inlineHelpText>
    <label>Auth Provider Callback URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>