force-app/main/default/objects/Croesus_SSO__mdt/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <inlineHelpText>Name of the X.509 used to sign the JWT tokens sent to Croesus</inlineHelpText>
    <label>Certificate Name</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>