force-app/main/default/objects/Croesus_SSO__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <inlineHelpText>Croesus&apos; Client ID</inlineHelpText>
    <label>Client ID</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>