force-app/main/default/objects/Croesus_SSO__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <inlineHelpText>Croesus&apos; Client Secret</inlineHelpText>
    <label>Client Secret</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>