force-app/main/default/objects/Croesus_SSO__mdt/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <inlineHelpText>Name of the application (issuer) at Croesus</inlineHelpText>
    <label>Issuer</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>