force-app/main/default/objects/Croesus_SSO__mdt/fields/Token_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint_URL__c</fullName>
    <inlineHelpText>URL of Croesus&apos; token endpoint</inlineHelpText>
    <label>Token Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>