force-app/main/default/objects/Croesus_SSO__mdt/fields/VF_Redirection_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>VF_Redirection_Page_Name__c</fullName>
    <inlineHelpText>Name of the Visualforce Page that handles the token negotiation redirection</inlineHelpText>
    <label>VF Redirection Page Name</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>